# specs/04_api_spec.yaml
@@ -432,6 +432,34 @@ paths:
                     type: integer
                   snapshot_at:
                     type: string
+  /api/v1/data/open-interest/snapshots:
+    get:
+      summary: Get Open Interest Snapshots
+      description: Returns a list of available Open Interest snapshots.
+      parameters:
+        - name: limit
+          in: query
+          schema:
+            type: integer
+            default: 20
+      responses:
+        '200':
+          description: List of snapshots
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                     snapshot_at:
+                       type: string
+                       format: date-time
+                     count:
+                       type: integer
+                     created_at:
+                       type: string
+                       format: date-time
 
   /api/v1/data/symbols/{symbol_id}:
     patch:
